--- a/Public/signup.html
+++ b/Public/signup.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
     <link rel="stylesheet" href="./styles/styles.css">
-    <script src="./index.js"></script>
 </head>
 
 <body>
@@ -34,6 +33,5 @@
         </a>
     </div>
 </body>
-<script src="./index.js"></script>
-
+<script src="index.js"></script>
 </html>
