--- a/Public/login.html
+++ b/Public/login.html
@@ -4,34 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="./index.js"></script>
 </head>
 
 <body>
-    <div class="authDiv">
-        <h3>Hello there!</h3>
-        <form action="/auth/login" method="POST" id="login-form" class="loginForm">
-            <div>
-                <label for="email">Email:</label><br>
-                <input required class="emailInput" id="email-input" name="username" placeholder="jhondoe@example.com"
-                    type="text"><br>
+    <div class="loginDiv">
+        <form action="/auth/login" method="POST" id="login-form">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email-input" name="username"
+                    placeholder="jhondoe@example.com" aria-describedby="emailHelp" required>
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <div>
-                <label for="password">Password:</label><br>
-                <input required class="emailInput" id="password-input" name="password" placeholder="*****"
-                    type="password"><br>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input class="form-control" id="password-input" name="password" placeholder="*****" type="password"
+                    required>
             </div>
-            <div>
-                <button id="login-btn">Log in</button>
-            </div>
+            <button type="submit" class="btn btn-primary" id="login-btn">Log in</button>
         </form>
-        <span>Do not have an account?</span>
-        <a href="/register">
-            <button>Sign Up</button>
-        </a>
     </div>
+    <span>Do not have an account?</span>
+    <a href="/register">
+        <button class="btn btn-outline-secondary">Sign Up</button>
+    </a>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+
 </html>
