--- a/Public/signup.html
+++ b/Public/signup.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sign up page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
@@ -13,30 +15,31 @@
     <div class="authDiv">
         <h3>Welcome!</h3>
         <form action="/auth/register" method="POST" id="signup-form" class="signinForm" enctype="multipart/form-data">
-            <div>
-                <label for="email">Email:</label><br>
-                <input required class="emailInput" id="email-input" name="username" placeholder="jhondoe@example.com"
-                    type="text"><br>
+            <div class="mb-3">
+                <label class="form-label" for="email">Email:</label>
+                <input class="form-control" required id="email-input" name="username" placeholder="jhondoe@example.com"
+                    type="text">
             </div>
-            <div>
-                <label for="password">Password:</label><br>
-                <input required class="emailInput" id="password-input" name="password" placeholder="*****"
-                    type="password"><br>
+            <div class="mb-3">
+                <label class="form-label" for="password">Password:</label>
+                <input required class="form-control" id="password-input" name="password" placeholder="*****"
+                    type="password">
             </div>
-            <div>
-                <label for="name">Name:</label><br>
-                <input required class="emailInput" id="name-input" name="name" placeholder="Jhon Doe" type="text"><br>
+            <div class="mb-3">
+                <label class="form-label" for="name">Name:</label>
+                <input required class="form-control" id="name-input" name="name" placeholder="Jhon Doe" type="text">
             </div>
-            <div>
-                <label for="address">Address:</label><br>
-                <input required class="emailInput" id="address-input" name="address" type="address"><br>
+            <div class="mb-3">
+                <label class="form-label" for="address">Address:</label>
+                <input required class="form-control" id="address-input" name="address" type="address">
             </div>
-            <div>
-                <label for="birthDate">Birthdate:</label><br>
-                <input required class="emailInput" id="birthDate-input" name="birthDate" placeholder="1997-12-04" type="date"><br>
-            </div>
-            <div>
-                <label for="phoneNumber">Phone Number:</label>
+            <div class="mb-3">
+                <label class="form-label" for="birthDate">Birthdate:</label>
+                <input required class="form-control" id="birthDate-input" name="birthDate" placeholder="1997-12-04"
+                    type="date">
+            </div class="mb-3">
+            <div class="mb-3">
+                <label class="form-label" for="phoneNumber">Phone Number:</label>
                 <select name="countryCode" id="">
                     <option data-countryCode="UY" value="598" selected>Uruguay (+598)</option>
                     <option data-countryCode="AR" value="54">Argentina (+54)</option>
@@ -255,21 +258,29 @@
                         <option data-countryCode="ZW" value="263">Zimbabwe (+263)</option>
                     </optgroup>
                 </select>
-                <input type="tel" name="phoneNumber" id="phoneNumber">
+                <input class="form-control" type="tel" name="phoneNumber" id="phoneNumber">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="profilePicture">Profile Picture:</label>
+                <input class="form-control" type="file" accept="image/*" name="profilePicture" id="profilePicture">
             </div>
             <div>
-                <label for="profilePicture">Profile Picture:</label><br>
-                <input type="file" accept="image/*" name="profilePicture" id="profilePicture">
-            </div>
-            <div>
-                <button id="singUp-btn">Sing up</button>
+                <button class="btn btn-primary" id="singUp-btn">Sing up</button>
             </div>
         </form>
         <span>Already have an account?</span>
         <a href="/">
-            <button>Log in</button>
+            <button class="btn btn-outline-secondary">Log in</button>
         </a>
     </div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 <script src="index.js"></script>
+
 </html>
