Se agregan capas

--- a/Public/login.html
+++ b/Public/login.html
@@ -30,7 +30,7 @@
         </form>
     </div>
     <span>Do not have an account?</span>
-    <a href="/register">
+    <a href="/auth/register">
         <button class="btn btn-outline-secondary">Sign Up</button>
     </a>
 </body>
